<?xml version="1.0"?>
<package format="2">
  <name>pycram_msgs</name>
  <version>0.0.0</version>
  <description>The pycram_msgs package</description>

  <maintainer email="user@example.com">Your Name</maintainer>

  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>message_generation</build_depend>
  <exec_depend>message_runtime</exec_depend>

  <depend>std_msgs</depend>
  <depend>rospy</depend>
  <depend>roscpp</depend>

  <export>
  </export>
</package>

